# wasd

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  CONTRIBUTING.md  Justfile  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: add-items-to-project.yaml  ci.yaml  pages-deploy.yaml  precommit-autoupdate.yaml
docs/: explore.md  getting_started.md  index.md
src/discord_bot_template/: __init__.py
